# Algoritmos_Encriptacion

./: README.MD
Algoritmos_por_transposicion_o_permutacion/: Matrix.cpp  Matrix.hpp  MatrixcppBackup.cpp  README.md  main.cpp  mainBackup.cpp  matrix
C/: cesar  cesar.c
Cesar_Cypher/: README.MD
Cesar_Cypher/asm/: cesar
Cifrado_Cesar/C/: Makefile  cesar
Cifrado_Cesar/asm/: cesar.asm
GTK_example/: Makefile  mainapp
GTK_example/headers/: mainApp.h  mainAppPreferences.h
GTK_example/src/: main.c.example  mainAppPreferences.c  mainAppWindow.c
GTK_example/ui/: window.ui
GUI_User_Resource_Manager/: Makefile  README.md  mainapp  mainapp.gresource.xml  test
GUI_User_Resource_Manager/backup/: file-browser.ui  fileBrowser.ui.backup  fileBrowserView.c  fileBrowserView.h  window.ui.backup
Juan_the_Ripper/: Makefile  README.MD  SHA512.cpp  SHA512.h  SHA512.hpp  hash.txt  hash.txt.save  hashMain.cpp  hashVal.cpp  juan  list.txt  main  main.asm
Matrix_Transposition_Encryption/: Matrix.cpp  main.cpp
Resource_Manager/: Makefile  gschemas.compiled  main  makefile  makefile.example  meson.build  org.gtk.mainapp.gschema.xml
Resource_Manager/glade/: window_main.glade  window_main.glade~
Resource_Manager/headers/: mainAppPreferences.h  mainAppWindow.h
Resource_Manager/schema/: mainapp.gresource.xml  org.gtk.mainApp.gschema.xml
Resource_Manager/src/: main.c  mainApp.c  mainAppPreferences.c  mainAppWindow.c  resources.c
Transposicion_por_Columnas/: Makefile  Matrix.cpp  Matrix.hpp  README.md  main.cpp  matrix
asm/: Makefile  cesar  cesar.asm  cesar.lst
(+19 files in other folders)
